Поменял путь к файлу со шрифтами

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,15 +1,2 @@
-@font-face {
-  font-family: "Open Sans";
-  src: url("/fonts/opensans.woff2"),
-        url("/fonts/opensans.woff");
-  font-style: normal;
-  font-weight: 400;
-}
+@import "general/fonts.less";
 
-@font-face {
-  font-family: "Open Sans";
-  src: url("/fonts/opensansbold.woff2"),
-        url("/fonts/opensansbold.woff");
-  font-style: normal;
-  font-weight: 700;
-}
