--- a/source/less/general/fonts.less
+++ b/source/less/general/fonts.less
@@ -1,1 +1,15 @@
-@import "general/fonts.less";
+@font-face {
+  font-family: 'Open Sans';
+  src: url('../fonts/opensans.woff'),
+        url('../fonts/opensans.woff2');
+  font-style: normal;
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  src: url('../fonts/opensansbold.woff'),
+        url('../fonts/opensansbold.woff2');
+  font-style: normal;
+  font-weight: 700;
+}
