--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,2 +1,18 @@
 @import "general/fonts.less";
+@import "blocks/page-header/page-header.less";
+@import "blocks/logo/logo.less";
+@import "blocks/page-main/page-main.less";
+@import "blocks/main-nav/main-nav.less";
+@import "blocks/good-sorts/good-sorts.less";
+@import "blocks/random-status-product/random-status-product.less";
+@import "blocks/about-us/about-us.less";
+@import "blocks/opinions/opinions.less";
+@import "blocks/catalog/catalog.less";
+@import "blocks/filter/filter.less";
+@import "blocks/page-footer/page-footer.less";
+@import "blocks/contacts/contacts.less";
+@import "blocks/modal/modal.less";
+
+
+
 
