Начал верстку с препроцессором

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,4 +1,12 @@
-@import "general/fonts.less";
+@tablet-width: 668px;
+@desktop-width: 1150px;
+
+body {
+  width: 320px;
+  margin: 0 auto;
+}
+
+@import "global/fonts.less";
 @import "blocks/page-header/page-header.less";
 @import "blocks/logo/logo.less";
 @import "blocks/page-main/page-main.less";
