--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,25 +1,19 @@
-@tablet-width: 668px;
-@desktop-width: 1150px;
-
-body {
-  width: 320px;
-  margin: 0 auto;
-}
-
-@import "global/fonts.less";
-@import "blocks/page-header/page-header.less";
-@import "blocks/logo/logo.less";
-@import "blocks/page-main/page-main.less";
-@import "blocks/main-nav/main-nav.less";
-@import "blocks/good-sorts/good-sorts.less";
-@import "blocks/random-status-product/random-status-product.less";
-@import "blocks/about-us/about-us.less";
-@import "blocks/opinions/opinions.less";
-@import "blocks/catalog/catalog.less";
-@import "blocks/filter/filter.less";
-@import "blocks/page-footer/page-footer.less";
-@import "blocks/contacts/contacts.less";
-@import "blocks/modal/modal.less";
+@import "normalize.less";
+@import "general.less";
+@import "blocks/btn.less";
+@import "blocks/page-header.less";
+@import "blocks/logo.less";
+@import "blocks/page-main.less";
+@import "blocks/main-nav.less";
+@import "blocks/good-sorts.less";
+@import "blocks/random-status-product.less";
+@import "blocks/about-us.less";
+@import "blocks/opinions.less";
+@import "blocks/catalog.less";
+@import "blocks/filter.less";
+@import "blocks/page-footer.less";
+@import "blocks/contacts.less";
+@import "blocks/modal.less";
 
 
 
