Доделал задание по 3 модулю

--- a/source/less/blocks/opinions.less
+++ b/source/less/blocks/opinions.less
@@ -1,5 +1,6 @@
 .opinions {
   padding: 0 30px;
+  padding-bottom: 45px;
   outline: 1px solid orange;
 }
 
@@ -55,3 +56,4 @@
   width: 130px;
   outline: 1px solid orange;
 }
+
