--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,3 +1,14 @@
 .page-main {
-  border: 1px solid rgb(99, 109, 187);
+  outline: 1px solid red;
+}
+
+.page-main__title {
+  outline: 1px solid red;
+  margin: 0 0 30px 0;
+  padding: 75px 0;
+  font-size: 27px;
+  line-height: 30px;
+  font-weight: bold;
+  text-align: center;
+  background-color: rgb(241, 241, 241);
 }
