--- a/source/less/style.less
+++ b/source/less/style.less
@@ -10,8 +10,11 @@
 @import "blocks/about-us.less";
 @import "blocks/opinions.less";
 @import "blocks/catalog.less";
+@import "blocks/work-process";
 @import "blocks/filter.less";
 @import "blocks/page-footer.less";
+@import "blocks/social.less";
+@import "blocks/designed.less";
 @import "blocks/contacts.less";
 @import "blocks/modal.less";
 
