Исправил ошибки, найденные The Travis CI#2

--- a/source/less/blocks/filter.less
+++ b/source/less/blocks/filter.less
@@ -13,17 +13,18 @@
   margin-top: 30px;
 }
 
-.filter__legend {
-}
-
-.filter__input-wrapper, .filter__customer,
-.filter__contacts, .filter__add-info {
+.filter__input-wrapper,
+.filter__customer,
+.filter__contacts,
+.filter__add-info {
   padding-top: 25px;
   outline: 1px solid green;
 }
 
-.filter__input-wrapper:last-child, .filter__customer:last-child,
-.filter__contacts, .filter__add-info:last-child {
+.filter__input-wrapper:last-child,
+.filter__customer:last-child,
+.filter__contacts,
+.filter__add-info:last-child {
   padding-bottom: 25px;
 }
 
