--- a/source/less/general.less
+++ b/source/less/general.less
@@ -3,17 +3,17 @@
 @desktop-width: 1150px;
 
 @font-face {
-  font-family: 'Open Sans';
-  src: url('../fonts/opensans.woff'),
-        url('../fonts/opensans.woff2');
+  font-family: "Open Sans";
+  src: url("../fonts/opensans.woff"),
+       url("../fonts/opensans.woff2");
   font-style: normal;
   font-weight: 400;
 }
 
 @font-face {
-  font-family: 'Open Sans';
-  src: url('../fonts/opensansbold.woff'),
-        url('../fonts/opensansbold.woff2');
+  font-family: "Open Sans";
+  src: url("../fonts/opensansbold.woff"),
+       url("../fonts/opensansbold.woff2");
   font-style: normal;
   font-weight: 700;
 }
@@ -29,15 +29,15 @@ body {
 
 @media (min-width: @tablet-width) {
   .container {
-    width: @tablet-width;
-    padding: 0 50px;
+  width: @tablet-width;
+  padding: 0 50px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .container {
-    width: @desktop-width;
-    padding: 0 50px;
+  width: @desktop-width;
+  padding: 0 50px;
   }
 }
 
