--- a/source/less/blocks/good-sorts.less
+++ b/source/less/blocks/good-sorts.less
@@ -3,7 +3,7 @@
 .good-sorts {
   outline: 1px solid orange;
   height: 489px;
-  background: rgb(250, 250, 250) url(../../../img/hero-mobile@1x.jpg) no-repeat center -20px;
+  background: rgb(250, 250, 250) url("../../../img/hero-mobile@1x.jpg") no-repeat center -20px;
 }
 
 .good-sorts__title {
@@ -13,7 +13,6 @@
   font-size: 27px;
   font-weight: bold;
   line-height: 30px;
-
 }
 
 .good-sorts__list {
@@ -23,7 +22,6 @@
   font-size: 19px;
   font-weight: bold;
   line-height: 24px;
-
 }
 
 .good-sorts__item {
@@ -43,6 +41,6 @@
 .good-sorts__name {
   display: block;
   width: 130px;
-  color: rgb(255,255,255);
+  color: rgb(255, 255, 255);
   text-decoration: none;
 }
