--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,4 +1,4 @@
-@import "normalize.less";
+@import "../../node_modules/normalize.less/normalize.less";
 @import "general.less";
 @import "blocks/btn.less";
 @import "blocks/page-header.less";
