--- a/source/less/general.less
+++ b/source/less/general.less
@@ -30,14 +30,14 @@ body {
 @media (min-width: @tablet-width) {
   .container {
     width: @tablet-width;
-    padding: 0 50px;
+    margin: 0 auto;
   }
 }
 
 @media (min-width: @desktop-width) {
   .container {
     width: @desktop-width;
-    padding: 0 50px;
+    margin: 0 auto;
   }
 }
 
