--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,16 +1,9 @@
 @import "../general.less";
 
 .page-header {
-  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
   border: 1px solid blue;
 }
 
-.page-header__add-info {
-  display: none;
-}
-
-@media (min-width: @tablet-width) {
-  .page-header__add-info {
-    display: flex;
-  }
-}
