Доработал файловую систему, продолжил делать адаптивной главную страницу

--- a/source/less/blocks/logo.less
+++ b/source/less/blocks/logo.less
@@ -1,11 +1,13 @@
 .logo {
+  text-align: center;
   outline: 1px solid green;
   height: 79px;
-  width: 320px;
+  width: 258px;
 }
 
 .logo__img {
-  padding: 22px 117px;
+  padding: 22px 0;
+  margin: 0 auto;
 }
 
 @media (min-width: @tablet-width) {
