--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,5 +1,3 @@
-@import "../mixins.less";
-
 .contacts {
   outline: 1px solid blue;
 }
@@ -37,10 +35,12 @@
 }
 
 .contacts__maps {
+  padding: 0;
   outline: 1px solid blue;
 }
 
 iframe.contacts__map-item {
+  padding: 0;
   margin-top: -457px;
 }
 
