--- a/source/less/blocks/good-sorts.less
+++ b/source/less/blocks/good-sorts.less
@@ -1,8 +1,6 @@
-@import "../mixins.less";
-
 .good-sorts {
+  margin-bottom: 35px;
   outline: 1px solid orange;
-  height: 489px;
   background: rgb(250, 250, 250) url("../../../img/hero-mobile@1x.jpg") no-repeat center -20px;
 }
 
@@ -18,7 +16,6 @@
 .good-sorts__list {
   .reset-list();
   outline: 1px solid green;
-  height: 206px;
   font-size: 19px;
   font-weight: bold;
   line-height: 24px;
@@ -27,14 +24,14 @@
 .good-sorts__item {
   outline: 1px solid blue;
   padding: 30px 30px;
-  height: 43px;
+  min-height: 43px;
 }
 
-.good-sorts__item--interior {
+.good-sorts__item:nth-child(odd) {
   background-color: rgb(99, 209, 187);
 }
 
-.good-sorts__item--toys {
+.good-sorts__item:nth-child(even) {
   background-color: rgb(86, 195, 178);
 }
 
@@ -43,4 +40,17 @@
   width: 130px;
   color: rgb(255, 255, 255);
   text-decoration: none;
+}
+
+@media (min-width: @tablet-width) {
+  .good-sorts__list {
+    display: flex;
+    flex-grow: 1;
+    margin-bottom: 54px;
+  }
+
+  .good-sorts__item {
+    flex-grow: 1;
+  }
+
 }
