--- a/source/less/blocks/random-status-product.less
+++ b/source/less/blocks/random-status-product.less
@@ -1,7 +1,4 @@
-@import "../mixins";
-
 .random-status-product {
-  padding: 35px 30px;
   text-align: left;
   outline: 1px solid red;
 }
@@ -26,6 +23,11 @@
   outline: 1px solid red;
 }
 
+ .random-status-product__specs {
+  display: flex;
+  flex-direction: column;
+}
+
 .random-status-product__description {
   margin: 0;
   padding-bottom: 22px;
@@ -34,15 +36,12 @@
   outline: 1px solid red;
 }
 
-.random-status-product__specs {
-  font-size: 15px;
-  line-height: 20px;
-}
-
 .random-status-product__spec-list {
   .reset-list();
   outline: 1px solid red;
   margin-bottom: 30px;
+  font-size: 15px;
+  line-height: 20px;
 }
 
 .random-status-product__spec-item {
@@ -51,12 +50,15 @@
 }
 
 .random-status-product__img {
-  height: 315px;
   outline: 1px solid red;
   margin-bottom: 22px;
 }
 
-.random-status-product__price {
+.random-status-product__order {
+  order: 1;
+}
+
+.random-status-product__order-price {
   display: block;
   font-size: 17px;
   line-height: 24px;
@@ -64,4 +66,73 @@
   color: rgb(68, 68, 68);
   text-align: center;
   outline: 1px solid red;
+}
+
+@media (min-width: @tablet-width) {
+  .random-status-product {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .random-status-product__name {
+    font-size: 43px;
+    line-height: 50px;
+    min-width: 500px;
+    padding: 0;
+    height: 42px;
+    margin-bottom: 47px;
+  }
+
+  .random-status-product__status {
+    width: 100px;
+    text-align: center;
+    padding: 0;
+    height: 42px;
+    margin-bottom: 50px;
+  }
+
+  .random-status-product__specs {
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    flex-grow: 1;
+
+  }
+
+  .random-status-product__specs-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  .random-status-product__description {
+    padding: 0;
+    margin-bottom: 39px;
+    font-size: 17px;
+    line-height: 30px;
+    width: 292px;
+  }
+
+  .random-status-product__order {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 0;
+    outline: 1px solid red;
+  }
+
+  .random-status-product__order-price {
+    margin: 0 0 34px 0;
+  }
+
+  .random-status-product__make-order {
+    width: 292px;
+  }
+
+  .random-status-product__img {
+    width: 333px;
+    height: 404px;
+    margin: 0;
+  }
 }
