--- a/source/less/general.less
+++ b/source/less/general.less
@@ -1,6 +1,3 @@
-@mobile-width: 320px;
-@tablet-width: 768px;
-@desktop-width: 1150px;
 
 @font-face {
   font-family: "Open Sans";
@@ -22,22 +19,32 @@ body {
   font-family: "Open Sans", "Arial", sans-serif;
 }
 
-.container {
+.screen-width{
   width: @mobile-width;
   margin: 0 auto;
 }
 
+.container {
+  padding: 0 30px;
+}
+
 @media (min-width: @tablet-width) {
-  .container {
+  .screen-width {
     width: @tablet-width;
     margin: 0 auto;
+  }
+  .container {
+  padding: 0 50px;
   }
 }
 
 @media (min-width: @desktop-width) {
-  .container {
+  .screen-width {
     width: @desktop-width;
     margin: 0 auto;
+  }
+  .container {
+  padding: 0 50px;
   }
 }
 
