--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,4 +1,6 @@
+@import "variables.less";
 @import "../../node_modules/normalize.less/normalize.less";
+@import "mixins.less";
 @import "general.less";
 @import "blocks/btn.less";
 @import "blocks/page-header.less";
