--- a/source/less/blocks/about-us.less
+++ b/source/less/blocks/about-us.less
@@ -1,5 +1,5 @@
 .about-us {
-  padding: 30px 30px 0 30px;
+  padding-top: 30px;
   outline: 1px solid blue;
 }
 
@@ -29,4 +29,59 @@
 .about-us__item:last-child {
   padding-bottom: 0;
   margin-bottom: 53px;
+}
+
+@media (min-width: @tablet-width) {
+  .about-us {
+    max-width: @tablet-width;
+  }
+  .about-us__title {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    font-size: 43px;
+    line-height: 50px;
+  }
+
+  .about-us__list {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    font-size: 20px;
+    line-height: 22px;
+    max-height: 640px;
+  }
+
+  .about-us__item {
+    max-width: 303px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+    .about-us {
+    max-width: @desktop-width;
+  }
+  .about-us__title {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 53px;
+    line-height: 57px;
+    width: 65%;
+    margin: 0 auto;
+  }
+
+  .about-us__list {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    font-size: 20px;
+    line-height: 22px;
+    max-height: 640px;
+    width: 65%;
+    margin: 0 auto;
+  }
+
+  .about-us__item {
+    width: 50%;
+  }
 }
