--- a/source/less/blocks/good-sorts.less
+++ b/source/less/blocks/good-sorts.less
@@ -1,7 +1,7 @@
 .good-sorts {
   margin-bottom: 35px;
   outline: 1px solid orange;
-  background: rgb(250, 250, 250) url("../../../img/hero-mobile@1x.jpg") no-repeat center -20px;
+  background: @color-light-grey url("../../../img/hero-mobile@1x.jpg") no-repeat center -20px;
 }
 
 .good-sorts__title {
@@ -38,7 +38,7 @@
 .good-sorts__name {
   display: block;
   width: 130px;
-  color: rgb(255, 255, 255);
+  color: @color-light-grey;
   text-decoration: none;
 }
 
