--- a/source/less/style.less
+++ b/source/less/style.less
@@ -8,7 +8,7 @@
 @import "blocks/page-main.less";
 @import "blocks/main-nav.less";
 @import "blocks/good-sorts.less";
-@import "blocks/random-status-product.less";
+@import "blocks/hit-product.less";
 @import "blocks/about-us.less";
 @import "blocks/opinions.less";
 @import "blocks/catalog.less";
