--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -1,3 +1,5 @@
 @mobile-width: 320px;
 @tablet-width: 768px;
 @desktop-width: 1150px;
+@color-light-grey: rgb(250, 250, 250);
+@color-dark-grey: rgb(241, 241, 241);
