--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,10 +1,11 @@
 .contacts {
+  padding: 43px 0 39px 0;
   outline: 1px solid blue;
 }
 
 
 .contacts__title {
-  padding: 0 30px 25px 30px;
+  margin: 0;
   font-size: 18px;
   line-height: 30px;
   font-weight: bold;
@@ -13,37 +14,117 @@
 
 .contacts__info {
   .reset-list();
-  padding: 0 30px;
+  padding: 20px 0;
   font-size: 15px;
   line-height: 30px;
   outline: 1px solid blue;
 }
 
 .contacts__item {
+  padding: 20px 0;
   display: flex;
   min-height: 20px;
   outline: 1px solid blue;
 }
 
 .contacts__type {
+  margin: 0;
   min-width: 77px;
   outline: 1px solid blue;
 }
 
 .contacts__data {
+  margin: 0;
   outline: 1px solid blue;
 }
 
 .contacts__maps {
-  padding: 0;
+  position: relative;
   outline: 1px solid blue;
 }
 
 iframe.contacts__map-item {
   padding: 0;
-  margin-top: -457px;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .contacts__write-us {
-  margin: 39px auto;
+  margin: 39px auto 0;
 }
+
+@media (min-width: @tablet-width) {
+  .contacts {
+  padding: 69px 0 57px 0;
+  outline: 1px solid blue;
+  }
+
+  .contacts__info {
+    padding: 0 50px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .contacts__title {
+    font-size: 43px;
+    line-height: 50px;
+  }
+
+  .contacts__item {
+    width: 50%;
+    font-size: 17px;
+    line-height: 30px;
+  }
+
+  .contacts__map-item {
+    width: 100%;
+  }
+
+  .contacts__write-us {
+  margin-top: 55px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .contacts {
+    position: relative;
+    padding: 69px 50px 57px 175px;
+  }
+
+  .contacts_wrapper {
+    margin-top: 80px;
+    width: 302px;
+  }
+
+   .contacts__title {
+    font-size: 53px;
+    line-height: 57px;
+  }
+
+  .contacts__info {
+    display: block;
+    padding: 0;
+  }
+
+  .contacts__item {
+    margin: 0;
+    width: 100%;
+  }
+
+  .contacts__maps {
+    position: absolute;
+    width: 525px;
+    height: 457px;
+    top: 69px;
+    right: 50px;
+  }
+
+  .contacts__write-us {
+    margin: 0;
+    margin-top: 56px;
+    width: 230px;
+}
+
+}
+
