--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,3 +1,52 @@
 .page-footer {
   background-color: @color-dark-grey;
 }
+
+.social__list {
+  display: flex;
+  .reset-list();
+  padding: 26px 0;
+  outline: 1px solid red;
+}
+
+.social__item {
+  width: 24px;
+  height: 30px;
+  outline: 1px solid green;
+}
+
+.designed {
+  padding: 26px 0;
+  font-size: 19px;
+  line-height: 18px;
+  font-weight: bold;
+  text-decoration: none;
+  outline: 1px solid red;
+}
+
+@media (min-width: @tablet-width) {
+  .page-footer__wrapper {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 50px 0;
+  }
+
+  .page-footer__logo {
+    display: block;
+    width: 25%;
+    text-align: left;
+  }
+
+  .social {
+    width: 200px;
+  }
+
+  .social__list {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .designed {
+    width: 25%;
+  }
+}
