--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -12,3 +12,10 @@
   text-align: center;
   background-color: rgb(241, 241, 241);
 }
+
+@media (min-width: @tablet-width) {
+  .page-main__title {
+    margin-top: -90px;
+    padding: 91px 0;
+  }
+}
