--- a/source/less/blocks/about-us.less
+++ b/source/less/blocks/about-us.less
@@ -1,99 +1,131 @@
-.about-us {
-  padding: 30px 0 53px 0;
-  outline: 1px solid blue;
+.about-us
+{
+    padding: 30px 0 53px 0;
+
+    outline: 1px solid blue;
 }
 
-.about-us__title {
-  margin: 0;
-  padding-bottom: 28px;
-  font-size: 25px;
-  line-height: 30px;
-  font-weight: bold;
-  outline: 1px solid blue;
+.about-us__title
+{
+    font-size: 25px;
+    font-weight: bold;
+    line-height: 30px;
+
+    margin: 0;
+    padding-bottom: 28px;
+
+    outline: 1px solid blue;
 }
 
-.about-us__list {
-  .reset-list();
-  font-size: 17px;
-  line-height: 20px;
-  font-weight: bold;
-  outline: 1px solid blue;
+.about-us__list
+{
+    font-size: 17px;
+    font-weight: bold;
+    line-height: 20px;
+
+    outline: 1px solid blue;
+
+    .reset-list();
 }
 
-.about-us__item {
-  height: 61px;
-  padding: 85px 0 27px 0;
-  outline: 1px solid blue;
+.about-us__item
+{
+    height: 61px;
+    padding: 85px 0 27px 0;
+
+    outline: 1px solid blue;
 }
 
-@media (min-width: @tablet-width) {
-  .about-us {
-    padding: 60px 50px 80px 50px;
-    max-width: @tablet-width;
-  }
-  .about-us__title {
-    display: flex;
-    flex-wrap: wrap;
-    align-content: center;
-    font-size: 43px;
-    line-height: 50px;
-  }
+@media (min-width: @tablet-width)
+{
+    .about-us
+    {
+        max-width: @tablet-width;
+        padding: 60px 50px 80px 50px;
+    }
+    .about-us__title
+    {
+        font-size: 43px;
+        line-height: 50px;
 
-  .about-us__list {
-    display: flex;
-    flex-wrap: wrap;
-    font-size: 20px;
-    line-height: 22px;
-  }
+        display: flex;
 
-  .about-us__item {
-    width: 50%;
-  }
+        flex-wrap: wrap;
+        align-content: center;
+    }
 
-  .about-us__item--eco {
-    order: 0;
-  }
+    .about-us__list
+    {
+        font-size: 20px;
+        line-height: 22px;
 
-  .about-us__item--price {
-    order: 2;
-  }
+        display: flex;
 
-  .about-us__item--like {
-    order: 4;
-  }
+        flex-wrap: wrap;
+    }
 
-  .about-us__item--handmade {
-    order: 1;
-  }
+    .about-us__item
+    {
+        width: 50%;
+    }
 
-  .about-us__item--homeland {
-    order: 3;
-  }
+    .about-us__item--eco
+    {
+        order: 0;
+    }
 
-  .about-us__item--giftwrap {
-    order: 5;
-  }
+    .about-us__item--price
+    {
+        order: 2;
+    }
 
+    .about-us__item--like
+    {
+        order: 4;
+    }
+
+    .about-us__item--handmade
+    {
+        order: 1;
+    }
+
+    .about-us__item--homeland
+    {
+        order: 3;
+    }
+
+    .about-us__item--giftwrap
+    {
+        order: 5;
+    }
 }
 
-@media (min-width: @desktop-width) {
-    .about-us {
-    padding: 68px 50px 90px 175px;
-    max-width: @desktop-width;
-  }
-  .about-us__title {
-    display: flex;
-    flex-wrap: wrap;
-    font-size: 53px;
-    line-height: 57px;
-    width: 65%;
-  }
+@media (min-width: @desktop-width)
+{
+    .about-us
+    {
+        max-width: @desktop-width;
+        padding: 68px 50px 90px 175px;
+    }
+    .about-us__title
+    {
+        font-size: 53px;
+        line-height: 57px;
 
-  .about-us__list {
-    width: 65%;
-  }
+        display: flex;
 
-  .about-us__item {
-    width: 50%;
-  }
+        width: 65%;
+
+        flex-wrap: wrap;
+    }
+
+    .about-us__list
+    {
+        width: 65%;
+    }
+
+    .about-us__item
+    {
+        width: 50%;
+    }
 }
