--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,113 +1,153 @@
-.catalog__item {
-  margin-top: 30px;
-  outline: 1px solid red;
+.catalog__item
+{
+    margin-top: 30px;
+
+    outline: 1px solid red;
 }
 
-.catalog__img {
-  margin: 0 auto;
-  background-color: rgb(241, 241, 241);
+.catalog__img
+{
+    margin: 0 auto;
+
+    background-color: rgb(241, 241, 241);
 }
 
-.catalog__title {
-  outline: 1px solid red;
-  text-decoration: none;
+.catalog__title
+{
+    text-decoration: none;
+
+    outline: 1px solid red;
 }
 
-.catalog__title h2 {
-  margin: 0;
-  font-size: 17px;
-  line-height: 24px;
-  font-weight: bold;
-}
-
-.catalog__description {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0 30px;
-  outline: 1px solid red;
-}
-
-.catalog__specs {
-  width: 100%;
-  margin: 0;
-  font-size: 13px;
-  line-height: 30px;
-  padding-bottom: 25px;
-  outline: 1px solid red;
-}
-
-.catalog__order{
-    display: flex;
-  }
-
-.catalog__price {
-  margin: 0;
-  padding: 19px 0;
-  width: 65%;
-  font-size: 15px;
-  line-height: 24px;
-  font-weight: bold;
-  outline: 1px solid red;
-}
-
-.catalog__basket-icon {
-  width: 35%;
-  outline: 1px solid red;
-}
-
-@media (min-width: @tablet-width) {
-  .catalog__item {
-    display: flex;
-    height: 334px;
-  }
-
-  .catalog__link-wrapper {
-    width: 50%;
-  }
-
-  .catalog__description {
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-  }
-
-  .catalog__title {
-    width: 100%;
-  }
-
-  .catalog__title h2 {
-    font-size: 20px;
-    padding-top: 10%;
-  }
-
-  .catalog__specs {
-    font-size: 15px;
-    flex-grow: 1;
-  }
-
-  .catalog__price {
+.catalog__title h2
+{
     font-size: 17px;
-  }
+    font-weight: bold;
+    line-height: 24px;
+
+    margin: 0;
 }
 
-@media (min-width: @desktop-width) {
-  .catalog {
+.catalog__description
+{
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  .catalog__item {
-    flex-wrap: wrap;
-    width: 30%;
-    height: 659px;
-  }
 
-  .catalog__description {
-    width: 100%;
-  }
+    padding: 0 30px;
 
-  .catalog__link-wrapper {
+    outline: 1px solid red;
+
+    flex-wrap: wrap;
+}
+
+.catalog__specs
+{
+    font-size: 13px;
+    line-height: 30px;
+
     width: 100%;
-    height: 462px;
-  }
+    margin: 0;
+    padding-bottom: 25px;
+
+    outline: 1px solid red;
+}
+
+.catalog__order
+{
+    display: flex;
+}
+
+.catalog__price
+{
+    font-size: 15px;
+    font-weight: bold;
+    line-height: 24px;
+
+    width: 65%;
+    margin: 0;
+    padding: 19px 0;
+
+    outline: 1px solid red;
+}
+
+.catalog__basket-icon
+{
+    width: 35%;
+
+    outline: 1px solid red;
+}
+
+@media (min-width: @tablet-width)
+{
+    .catalog__item
+    {
+        display: flex;
+
+        height: 334px;
+    }
+
+    .catalog__link-wrapper
+    {
+        width: 50%;
+    }
+
+    .catalog__description
+    {
+        display: flex;
+        flex-direction: column;
+
+        width: 50%;
+    }
+
+    .catalog__title
+    {
+        width: 100%;
+    }
+
+    .catalog__title h2
+    {
+        font-size: 20px;
+
+        padding-top: 10%;
+    }
+
+    .catalog__specs
+    {
+        font-size: 15px;
+
+        flex-grow: 1;
+    }
+
+    .catalog__price
+    {
+        font-size: 17px;
+    }
+}
+
+@media (min-width: @desktop-width)
+{
+    .catalog
+    {
+        display: flex;
+
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .catalog__item
+    {
+        width: 30%;
+        height: 659px;
+
+        flex-wrap: wrap;
+    }
+
+    .catalog__description
+    {
+        width: 100%;
+    }
+
+    .catalog__link-wrapper
+    {
+        width: 100%;
+        height: 462px;
+    }
 }
