--- a/source/less/blocks/modal.less
+++ b/source/less/blocks/modal.less
@@ -1,83 +1,107 @@
-.modal {
-  padding: 36px 30px 46px 30px;
-  border: 1px solid rgb(199, 199, 199);
-  box-shadow: 0 10px 10px -10px rgb(198, 198, 198);
+.modal
+{
+    padding: 36px 30px 46px 30px;
+
+    border: 1px solid rgb(199, 199, 199);
+    box-shadow: 0 10px 10px -10px rgb(198, 198, 198);
 }
 
-.modal__form {
-  margin: 0;
-}
-
-
-.modal__title {
-  margin: 0 auto;
-  margin-bottom: 13px;
-  width: 100%;
-  font-size: 25px;
-  line-height: 30px;
-  font-weight: bold;
-  text-align: center;
-  text-transform: uppercase;
-}
-
-.modal__sub-title {
-  margin: 0 0 20px 0;
-  font-size: 15px;
-  line-height: 30px;
-  font-weight: normal;
-  text-align: center;
-}
-
-.modal__list {
-  .reset-list();
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
+.modal__form
+{
+    margin: 0;
 }
 
 
-.modal__size-item {
-  margin-right: 7px;
-  margin-bottom: 31px;
-  width: 82px;
-  height: 52px;
-  font-size: 17px;
-  line-height: 16px;
-  outline: 1px solid red;
-}
+.modal__title
+{
+    font-size: 25px;
+    font-weight: bold;
+    line-height: 30px;
 
-.modal__size-item:last-child {
-  margin-right: 0;
-}
-
-.modal__add {
-  background-color: rgb(99, 209, 187);
-  border: none;
-  color: rgb(255, 255, 255);
-  margin: 0 auto;
-}
-
-@media (min-width: @tablet-width) {
-  .modal {
-    padding: 50px 110px 46px 110px;
-    margin: 0 auto;
-    width: 358px;
-  }
-
-  .modal__title {
-    font-size: 30px;
-    line-height: 57px;
-  }
-
-  .modal__list {
-    width: 100%
-  }
-
-  .modal__size-item {
-    width: 112px;
-  }
-
-  .modal__add {
     width: 100%;
-  }
+    margin: 0 auto;
+    margin-bottom: 13px;
+
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.modal__sub-title
+{
+    font-size: 15px;
+    font-weight: normal;
+    line-height: 30px;
+
+    margin: 0 0 20px 0;
+
+    text-align: center;
+}
+
+.modal__list
+{
+    display: flex;
+
+    width: 100%;
+
+    .reset-list();
+    justify-content: space-between;
+}
+
+
+.modal__size-item
+{
+    font-size: 17px;
+    line-height: 16px;
+
+    width: 82px;
+    height: 52px;
+    margin-right: 7px;
+    margin-bottom: 31px;
+
+    outline: 1px solid red;
+}
+
+.modal__size-item:last-child
+{
+    margin-right: 0;
+}
+
+.modal__add
+{
+    margin: 0 auto;
+
+    color: rgb(255, 255, 255);
+    border: none;
+    background-color: rgb(99, 209, 187);
+}
+
+@media (min-width: @tablet-width)
+{
+    .modal
+    {
+        width: 358px;
+        margin: 0 auto;
+        padding: 50px 110px 46px 110px;
+    }
+
+    .modal__title
+    {
+        font-size: 30px;
+        line-height: 57px;
+    }
+
+    .modal__list
+    {
+        width: 100%;
+    }
+
+    .modal__size-item
+    {
+        width: 112px;
+    }
+
+    .modal__add
+    {
+        width: 100%;
+    }
 }
