--- a/source/less/blocks/work-process.less
+++ b/source/less/blocks/work-process.less
@@ -1,87 +1,114 @@
-.work-process {
-  padding-top: 32px;
-  padding-bottom: 60px;
-  outline: 2px solid blue;
+.work-process
+{
+    padding-top: 32px;
+    padding-bottom: 60px;
+
+    outline: 2px solid blue;
 }
 
-.work-process__title {
-  margin: 0;
-  padding: 30px 12px 30px 60px;
-  font-size: 17px;
-  line-height: 24px;
-  font-weight: bold;
-  outline: 1px solid blue;
-}
-
-.work-process__img-video {
-  outline: 1px solid blue;
-  position: relative;
-  width: 100%;
-}
-
-.work-process__video {
-  position: absolute;
-  top: 0;
-  left: 0;
-
-}
-
-.work-process__text {
-  font-size: 13px;
-  line-height: 24px;
-  padding: 0 35px;
-  outline: 1px solid blue;
-}
-
-.work-process__make-order {
-  margin: 0 auto;
-  width: 190px;
-}
-
-@media (min-width: @tablet-width) {
-  .work-process {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .work-process__img-video {
-    width: 100%;
-    height: 455px;
-    order: -1;
-  }
-
-  .work-process__make-order {
+.work-process__title
+{
     font-size: 17px;
-    line-height: 16px;
-    width: 598px;
-  }
+    font-weight: bold;
+    line-height: 24px;
+
+    margin: 0;
+    padding: 30px 12px 30px 60px;
+
+    outline: 1px solid blue;
 }
 
-@media (min-width: @desktop-width) {
-  .work-process {
+.work-process__img-video
+{
+    position: relative;
+
     width: 100%;
-    flex-wrap: wrap;
-    max-height: 455px;
-  }
 
-  .work-process__img-video {
-    width: 682px;
-  }
+    outline: 1px solid blue;
+}
 
-  .work-process__title {
-    margin-top: 100px;
-    padding-left: 30px;
-    font-size: 20px;
-    width: 230px;
-  }
-  .work-process__text {
-    font-size: 15px;
-    line-height: 30px;
-    width: 250px;
-  }
+.work-process__video
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+}
 
-  .work-process__make-order {
-    width: 230px;
-    margin-left: 30px;
-  }
+.work-process__text
+{
+    font-size: 13px;
+    line-height: 24px;
+
+    padding: 0 35px;
+
+    outline: 1px solid blue;
+}
+
+.work-process__make-order
+{
+    width: 190px;
+    margin: 0 auto;
+}
+
+@media (min-width: @tablet-width)
+{
+    .work-process
+    {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .work-process__img-video
+    {
+        width: 100%;
+        height: 455px;
+
+        order: -1;
+    }
+
+    .work-process__make-order
+    {
+        font-size: 17px;
+        line-height: 16px;
+
+        width: 598px;
+    }
+}
+
+@media (min-width: @desktop-width)
+{
+    .work-process
+    {
+        width: 100%;
+        max-height: 455px;
+
+        flex-wrap: wrap;
+    }
+
+    .work-process__img-video
+    {
+        width: 682px;
+    }
+
+    .work-process__title
+    {
+        font-size: 20px;
+
+        width: 230px;
+        margin-top: 100px;
+        padding-left: 30px;
+    }
+    .work-process__text
+    {
+        font-size: 15px;
+        line-height: 30px;
+
+        width: 250px;
+    }
+
+    .work-process__make-order
+    {
+        width: 230px;
+        margin-left: 30px;
+    }
 }
