--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -3,3 +3,4 @@
 @desktop-width: 1150px;
 @color-light-grey: rgb(250, 250, 250);
 @color-dark-grey: rgb(241, 241, 241);
+@color-mint: rgb(99, 209, 187);
